[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/My_handwritten_font-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sprites/player_ui/sun_dial.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 48
use_filter = true
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -360.0
margin_right = 360.0
margin_bottom = 360.0
rect_min_size = Vector2( 720, 720 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 1, 0.980392, 0.811765, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Color"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Color/Margin"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
custom_constants/separation = 150

[node name="Title" type="Label" parent="Color/Margin/VBox"]
margin_right = 1080.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dyson Sphere Corp."
align = 1
valign = 1

[node name="Margin" type="MarginContainer" parent="Color/Margin/VBox"]
margin_top = 268.0
margin_right = 1080.0
margin_bottom = 448.0
mouse_filter = 2
custom_constants/margin_right = 350
custom_constants/margin_left = 350

[node name="VBox" type="VBoxContainer" parent="Color/Margin/VBox/Margin"]
margin_left = 350.0
margin_right = 730.0
margin_bottom = 180.0
custom_constants/separation = 15

[node name="Start" type="Button" parent="Color/Margin/VBox/Margin/VBox" groups=[
"Button",
]]
margin_right = 380.0
margin_bottom = 50.0
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.380392, 0.286275, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.380392, 0.286275, 1 )
toggle_mode = true
text = "Start"
flat = true

[node name="Settings" type="Button" parent="Color/Margin/VBox/Margin/VBox" groups=[
"Button",
]]
margin_top = 65.0
margin_right = 380.0
margin_bottom = 115.0
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.380392, 0.286275, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.380392, 0.286275, 1 )
toggle_mode = true
text = "Settings"
flat = true

[node name="Quit" type="Button" parent="Color/Margin/VBox/Margin/VBox" groups=[
"Button",
]]
margin_top = 130.0
margin_right = 380.0
margin_bottom = 180.0
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.380392, 0.286275, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.380392, 0.286275, 1 )
toggle_mode = true
text = "Quit"
flat = true

[connection signal="pressed" from="Color/Margin/VBox/Margin/VBox/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Color/Margin/VBox/Margin/VBox/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Color/Margin/VBox/Margin/VBox/Quit" to="." method="_on_Quit_pressed"]
